--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,6 @@ plugins:
 
 theme: jekyll-theme-midnight
 
-title: HOUSE HILTON
-description: WE SHALL RETURN
+title: House Hilton
+description: The Best House in all the Land!
 
